adicionei um parágrafo.

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore suscipit aliquam, praesentium voluptates mollitia tempore reiciendis numquam quisquam rem assumenda, rerum soluta nam dolorem temporibus corrupti velit, atque iusto maiores!</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet sapiente officiis amet, quis placeat quasi illo non rem delectus accusantium aperiam pariatur itaque iste eligendi quos consequuntur rerum illum. Fugit?</p>
 </body>
 </html>
